# sqlalchemy-alembic-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  Dockerfile  Dockerfile.dev  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  release_parameters.yml  requirements.txt  setup.py
db_models/: config.py  tiers.py
db_models/cli/: __init__.py  create_schema.py  downgrade_migration.py  run_migration.py  upgrade_migration.py  utils.py
db_models/cli/create_migration/: __init__.py  __main__.py  emptiness.py  paths.py  revision.py
db_models/cli/generate_stubs/: __init__.py  __main__.py  parsing.py
db_models/generate_models/: __main__.py  cli.py  columns.py  main.py  reflection.py  relationships.py  rendering.py
db_models/models/: __init__.py
db_models/models/example/: __init__.py  __init__.pyi  bar.py  foo.py
db_models/models/example/dev/: __init__.py  bar.py
ddl_compare/: Dockerfile  README.md  compare_schemas.ps1
docker/postgres/init/: 01-create-databases.sql
docs/: CONTRIBUTING.md  RUNBOOK.md
helm/: Chart.yaml  README.md  values-dev.yaml  values-main.yaml
helm/templates/: migration-job.yaml
migrations/: env.py  migration_filters.py  utils.py
migrations/versions/dev/: 2026-06-08_00-00-01_b2c3d4e5f6a7.py
migrations/versions/main/: 2026-06-08_00-00-00_a1b2c3d4e5f6.py
tests/test_cli/: test_downgrade_migration.py  test_generate_stubs.py  test_run_migration.py  test_upgrade_migration.py
tests/test_create_schema/: conftest.py  test_error_handling.py  test_file_content.py  test_file_creation.py  test_pascal_case.py
tests/test_generate_models/: test_columns.py  test_rendering.py
tests/test_migration_filters/: test_server_default.py
tests/test_migrations/: test_heads.py
tests/test_model_loading/: test_export_contract.py  test_tier_inference.py
tests/test_table_override/: test_edge_cases.py  test_scenarios.py  test_shadowed_stems.py  test_tier_visibility.py
